chore: 1.21 cleanup
migrate to MDG for faster builds, optimize imports, replace some usages
of deprecated methods/fields, some other cleanup